# web-graph-builder

./: .flake8  .gitignore  README.md  pyproject.toml
app/: db.py  excel_parser.py  graph.py  main.py  router.py
app/static/: index.html  script.js  styles.css
