[project]
name = "web-graph-builder"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Shibaev",email = "nshib.54321@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "tinydb (>=4.8.2,<5.0.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "ruff (>=0.12.12,<0.13.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
exclude = ["__pycache__"]


[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["config", "image_selector", "image_data", "logger", "router"]
known_third_party = ["fastapi", "pydantic"]
